@@ -424,6 +424,17 @@ org.freedesktop.ModemManager.Device.Control    auth_admin_keep
    </para>
   </section>
 
+  <section>
+   <!-- bnc#902398 -->
+   <title>Zast Not Found</title>
+   <para>
+    If you are used to German keyboards (QWERTZ) and you are using a
+    QWERTY one (or vice versa), your are going to find writing 'zast'
+    instead of 'yast' several times.  A regression in 13.2 is that
+    there is not more /sbin/zast as a link to /sbin/yast.  The good
+    news is that this will be fixed via the update channel very soon.
+   </para>
+  </section>
 
   <!--
   <section>
