@@ -6,6 +6,7 @@
 - New entry: Modem Authorization After Suspend (bnc#900813).
 - New entry: Network After an Update With YaST (bnc#895447)
   Installer and Keyboard Settings (bnc#903242).
+- New entry: Zast Not Found (bnc#902398).
 
 13.2.20141030:
 - Update translations.
